# credit_default_prediction

./: .gitignore  pyproject.toml  run.py
data/: test_data.csv  test_set_treated_v1.csv  test_set_treated_v2.csv  train_data.csv  val_set_treated_v1.csv  val_set_treated_v2.csv
modeling/: model_trainer.py
notebooks/: 01_data_loading.ipynb  03_modeling_and_evaluation [VERSION 2].ipynb  03_modeling_and_evaluation.ipynb  hgb_cv_results.csv  lgbm_cv_results.csv  mlp_cv_results.csv  rf_cv_results.csv  svm_cv_results.csv
preprocessing/: data_loader.py  data_processor.py  processing_steps.py
utils/: serialization.py
