[tool.poetry]
name = "credit-default-prediction"
version = "0.1.0"
description = "Prediction of credit default."
authors = ["MafSV20180073"]
license = "-"
readme = "README.md"
packages = [{include = "credit_default_prediction"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = ">=1.21,<1.25"
pandas = "^2.0.3"
scikit-learn = "1.3.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scipy = "^1.11.1"
statsmodels = "0.13.5"
kaggle = "^1.5.15"
shap = "^0.41.0"
llvmlite = "^0.40.1"
fairgbm = "^0.9.14"
lightgbm = "^3.3.5"
isort = "^5.12.0"
pylint = "^2.17.4"
autopep8 = "^2.0.2"
black = "^23.3.0"
imblearn = "^0.0"
imbalanced-learn = "^0.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
